<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="sharedPreferencesFilename" translatable="false">here_i_am</string>
	<string name="select_language">Select language</string>

	<string name="app_name">Π.Ο.Β. 4x4</string>

	<string name="my_location">My location</string>

	<string name="navigator_not_installed">Cannot find any installed navigation program</string>
	<string name="permissions_denied">Application cannot operate without permissions</string>

    <string name="suffix_meters">m</string>
	<string name="suffix_kilometers">km</string>

	<string name="location_lat">latitude</string>
	<string name="location_lon">longitude</string>
	<string name="altitude">altitude</string>

	<string name="waiting_gps">Waiting GPS…</string>
	<string name="gps_is_off">GPS is disabled</string>
    <string name="in_view">in view</string>
	<string name="in_fix">fixed</string>
	<string name="accuracy">accuracy</string>
    <string name="save_location">Save current location</string>
	<string name="location_title">Select title</string>
	<string name="save">Save</string>

	<string name="saved_places">Saved locations</string>
    <string name="loading">Loading</string>
	<string name="date_time">Date / time</string>
    <string name="show_map">Show on map</string>
	<string name="edit">Edit</string>
    <string name="delete">Delete</string>
	<string name="coordinates">Coordinates</string>
    <string name="share">Share</string>
    <string name="confirm_delete">Are you sure you want to delete this location?</string>
    <string name="navigate">Navigate here</string>
	<string name="select_format">Select coordinates format</string>
    <string name="decimal">decimal (DDD.DDDDD°)</string>
    <string name="degrees">degrees (DDD° MM\' SS.S")</string>
	<string name="settings">Settings</string>
    <string name="no_gps_continue">Your location has not been found yet. Do you want to continue without this information?</string>
	<string name="warning_msg">The use of the application results in the sending of an SMS message to the phone of ΠΟΒ4X4.\nIn addition to the unnecessary charge, the reckless use of the number maliciously or for trials, will lead to the exclusion of your number from the alert system.\n\nPlease choose the recipient of this SMS</string>
	<string name="warning">Warning</string>
	<string name="final_info">The application will promote your location in the messaging application. Fill in your name, a brief description of the problem and click submit</string>
    <string name="problem">Problem:</string>
	<string name="title_and_programmer">Programmer: Christos Themelis</string>
	<string name="friends">From my contacts</string>


</resources>
