<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_show_map"
        android:title="@string/show_map"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_navigate"
        android:title="@string/navigate"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_share"
        android:title="@string/share"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_edit"
        android:title="@string/edit"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_delete"
        android:title="@string/delete"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
</menu>
